<resources>
    <string name="app_name">My Flight</string>
    <string name="my">My</string>
    <string name="flight">Flight</string>
    <string name="track">Track your flight</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="searchbar_hint">Search Flight...</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_maps">Maps</string>
    <string name="title_profile">Profile</string>
    <string name="flight1"><b>LION AIR</b><br /><small>Teks Kedua</small></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_flight_list">FlightList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tv_welcome">Welcome To</string>
    <string name="tv_myflight">My Flight!</string>
    <string name="btn_flight">Flight List</string>
    <string name="btn_myflight">My Flight</string>
    <string name="btn_weather">Weather Forecast</string>
    <string name="btn_profset">Profile Settings</string>
    <string name="tv_name">Taylor Swift</string>
    <string name="tv_editpict">Edit Picture</string>
    <string name="tv_profname">Name</string>
    <string name="tv_profemail">Email</string>
    <string name="tv_profpronouns">Pronouns</string>
    <string name="tv_profphonenumber">Phone Number</string>
    <string name="tv_email">taylorswift@gmail.com</string>
    <string name="tv_pronouns">She/Her</string>
    <string name="tv_phonenumber">081234567890</string>
    <string name="btn_done">Done</string>
    <string name="predict">Status</string>
    <string name="tv_schedule">Status</string>

</resources>