<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileSettings">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profpict"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/profpict"/>

    <TextView
        android:id="@+id/tv_editpict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/civ_profpict"
        android:layout_marginTop="10dp"
        android:text="@string/tv_editpict"
        android:textColor="@color/navy"
        android:fontFamily="@font/poppinsbold"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/IV_weather"
        android:layout_width="365dp"
        android:layout_height="170dp"
        android:layout_below="@+id/tv_editpict"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button3_shape"/>

    <LinearLayout
        android:id="@+id/ll_profinfo"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_editpict"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_profname"
            android:textSize="18sp"
            android:textColor="@color/navy"
            android:paddingStart="10dp"
            android:fontFamily="@font/poppinsbold"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_profemail"
            android:textSize="18sp"
            android:textColor="@color/navy"
            android:paddingStart="10dp"
            android:fontFamily="@font/poppinsbold"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_profpronouns"
            android:textSize="18sp"
            android:textColor="@color/navy"
            android:paddingStart="10dp"
            android:fontFamily="@font/poppinsbold"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_profphonenumber"
            android:textSize="18sp"
            android:textColor="@color/navy"
            android:paddingStart="10dp"
            android:fontFamily="@font/poppinsbold"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_profinfo2"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_editpict"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/tv_name"
            android:textSize="18sp"
            android:textColor="@color/navy"
            android:paddingEnd="10dp"
            android:fontFamily="@font/poppinsregular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/tv_email"
            android:textSize="18sp"
            android:textColor="@color/navy"
            android:paddingEnd="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppinsregular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/tv_pronouns"
            android:textSize="18sp"
            android:textColor="@color/navy"
            android:paddingEnd="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppinsregular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/tv_phonenumber"
            android:textSize="18sp"
            android:textColor="@color/navy"
            android:paddingEnd="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppinsregular"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_profinfo2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_done"
        android:textColor="@color/cyan"
        android:fontFamily="@font/poppinsbold"
        android:background="@drawable/button2_shape"/>


</RelativeLayout>