<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/header"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/myflight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My"
            android:textSize="50sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Flight"
            android:textSize="50sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/cyan"/>

    </LinearLayout>

    <TextView
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myflight"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/track"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/track"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/LoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/ketNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="Email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_email_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/fill_shape"
            android:hint="Enter your email"
            android:paddingLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:text="Password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_password_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/fill_shape"
            android:hint="Enter your password"
            android:drawableEnd="@drawable/eye"
            android:paddingRight="20dp"
            android:paddingLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/check"
            android:paddingLeft="20dp"
            android:text="Remember me"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:backgroundTint="@color/navy"
        android:width="300dp"
        android:height="55dp"
        android:background="@drawable/button2_shape"
        android:fontFamily="@font/poppinsregular"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:background="@drawable/button_shape"
        android:width="300dp"
        android:height="55dp"
        android:fontFamily="@font/poppinsregular"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>